chore: update eb env variables

--- a/.ebextensions/efs-mount.config
+++ b/.ebextensions/efs-mount.config
@@ -30,9 +30,8 @@
 
 option_settings:
   aws:elasticbeanstalk:application:environment:
-    # Inject these from the Elastic Beanstalk environment directly
-    # FILE_SYSTEM_ID: '`{"Ref" : "FileSystem"}`'
-    # CERT_PATH: '/certs'
+    FILE_SYSTEM_ID: 'fs-0a98765e9979a4e46'
+    CERT_PATH: '/certs'
 
 ##############################################
 #### Do not modify values below this line ####
