--- a/.ebextensions/env-file-creation.config
+++ b/.ebextensions/env-file-creation.config
@@ -1,5 +1,9 @@
 # Creates an .env file from AWS SSM Parameter Store
 
+option_settings:
+  aws:elasticbeanstalk:application:environment:
+    SSM_PREFIX: 'prod'
+
 commands:
   01-create-env:
     command: "/tmp/create-env.sh"
@@ -13,7 +17,7 @@ files:
         AWS_REGION='`{"Ref": "AWS::Region"}`'
         ENV_TYPE=$(/opt/elasticbeanstalk/bin/get-config environment -k SSM_PREFIX)
         ENV_SITE_NAME=$(/opt/elasticbeanstalk/bin/get-config environment -k SSM_ENV_SITE_NAME)
-        TARGET_DIR=/etc/formsg
+        TARGET_DIR=/etc/formid
 
         echo "Checking if ${TARGET_DIR} exists..."
         if [ ! -d ${TARGET_DIR} ]; then
