fix: remove .env directory if one exists

--- a/.ebextensions/env-file-creation.config
+++ b/.ebextensions/env-file-creation.config
@@ -28,6 +28,9 @@ files:
                 exit 1
             fi
         else
+            if [ -d ${TARGET_DIR}/.env ]; then
+                rm -rf ${TARGET_DIR}/.env
+            fi
             echo "Directory ${TARGET_DIR} already exists!"
         fi
 
