chore: add debug option for aws ssm

--- a/.ebextensions/env-file-creation.config
+++ b/.ebextensions/env-file-creation.config
@@ -30,6 +30,7 @@ files:
         else
             if [ -d ${TARGET_DIR}/.env ]; then
                 rm -rf ${TARGET_DIR}/.env
+                echo "Deleting .env as a folder"
             fi
             echo "Directory ${TARGET_DIR} already exists!"
         fi
@@ -43,7 +44,7 @@ files:
         fi
 
         echo "Creating config for ${ENV_SITE_NAME} in ${AWS_REGION}"
-        aws ssm get-parameter --name "${ENV_TYPE}-general" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' > $TARGET_DIR/.env
+        aws ssm get-parameter --name "${ENV_TYPE}-general" --with-decryption --region $AWS_REGION --debug | jq -r '.Parameter.Value' > $TARGET_DIR/.env
         aws ssm get-parameter --name "${ENV_TYPE}-captcha" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' >> $TARGET_DIR/.env
         aws ssm get-parameter --name "${ENV_TYPE}-turnstile" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' >> $TARGET_DIR/.env
         aws ssm get-parameter --name "${ENV_TYPE}-ga" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' >> $TARGET_DIR/.env
