--- a/.ebextensions/env-file-creation.config
+++ b/.ebextensions/env-file-creation.config
@@ -44,7 +44,9 @@ files:
         fi
 
         echo "Creating config for ${ENV_SITE_NAME} in ${AWS_REGION}"
-        aws ssm get-parameter --name "${ENV_TYPE}-general" --with-decryption --region $AWS_REGION --debug | jq -r '.Parameter.Value' > $TARGET_DIR/.env
+        GENERAL_ENV_VARIABLES=$(aws ssm get-parameter --name "${ENV_TYPE}-general" --with-decryption --region $AWS_REGION --debug | jq -r '.Parameter.Value')
+        GENERAL_ENV_VARIABLES > $TARGET_DIR/.env
+        echo "General Env Variables: ${GENERAL_ENV_VARIABLES}"
         aws ssm get-parameter --name "${ENV_TYPE}-captcha" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' >> $TARGET_DIR/.env
         aws ssm get-parameter --name "${ENV_TYPE}-turnstile" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' >> $TARGET_DIR/.env
         aws ssm get-parameter --name "${ENV_TYPE}-ga" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' >> $TARGET_DIR/.env
