chore: still debugging aws config

--- a/.ebextensions/env-file-creation.config
+++ b/.ebextensions/env-file-creation.config
@@ -44,9 +44,7 @@ files:
         fi
 
         echo "Creating config for ${ENV_SITE_NAME} in ${AWS_REGION}"
-        GENERAL_ENV_VARIABLES=$(aws ssm get-parameter --name "${ENV_TYPE}-general" --with-decryption --region $AWS_REGION --debug | jq -r '.Parameter.Value')
-        echo $GENERAL_ENV_VARIABLES > $TARGET_DIR/.env
-        echo "General Env Variables: ${GENERAL_ENV_VARIABLES}"
+        aws ssm get-parameter --name "${ENV_TYPE}-general" --with-decryption --region $AWS_REGION --debug | jq -r '.Parameter.Value' > $TARGET_DIR/.env
         aws ssm get-parameter --name "${ENV_TYPE}-captcha" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' >> $TARGET_DIR/.env
         aws ssm get-parameter --name "${ENV_TYPE}-turnstile" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' >> $TARGET_DIR/.env
         aws ssm get-parameter --name "${ENV_TYPE}-ga" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' >> $TARGET_DIR/.env
@@ -59,9 +57,6 @@ files:
         aws ssm get-parameter --name "${ENV_SITE_NAME}-sgid" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' >> $TARGET_DIR/.env
         aws ssm get-parameter --name "${ENV_SITE_NAME}-payment" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' >> $TARGET_DIR/.env
         aws ssm get-parameter --name "${ENV_SITE_NAME}-cron-payment" --with-decryption --region $AWS_REGION | jq -r '.Parameter.Value' >> $TARGET_DIR/.env
-
-        cat $TARGET_DIR/.env
-        echo $IMAGE_S3_BUCKET
 
 packages:
   yum: 
