--- a/.ebextensions/env-file-creation.config
+++ b/.ebextensions/env-file-creation.config
@@ -13,7 +13,7 @@ files:
         AWS_REGION='`{"Ref": "AWS::Region"}`'
         ENV_TYPE=$(/opt/elasticbeanstalk/bin/get-config environment -k SSM_PREFIX)
         ENV_SITE_NAME=$(/opt/elasticbeanstalk/bin/get-config environment -k SSM_ENV_SITE_NAME)
-        TARGET_DIR=/etc/formsg
+        TARGET_DIR=/etc/formid
 
         echo "Checking if ${TARGET_DIR} exists..."
         if [ ! -d ${TARGET_DIR} ]; then
