--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,79 +23,44 @@ services:
       - FE_APP_URL=http://localhost:3000
       - ATTACHMENT_S3_BUCKET=local-attachment-bucket
       - PAYMENT_PROOF_S3_BUCKET=local-payment-proof-bucket
+      - IMAGE_S3_BUCKET=local-image-bucket
       - LOGO_S3_BUCKET=local-logo-bucket
       - STATIC_ASSETS_S3_BUCKET=local-static-assets-bucket
       - VIRUS_SCANNER_QUARANTINE_S3_BUCKET=local-virus-scanner-quarantine-bucket
       - VIRUS_SCANNER_CLEAN_S3_BUCKET=local-virus-scanner-clean-bucket
       - FORMSG_SDK_MODE=development
-      - BOUNCE_LIFE_SPAN=86400000
       - AWS_ACCESS_KEY_ID=fakeKey
       - AWS_SECRET_ACCESS_KEY=fakeSecret
       - SESSION_SECRET=thisisasecret
       - AWS_ENDPOINT=http://localhost:4566
       - SECRET_ENV=development
-      - SUBMISSIONS_RATE_LIMIT=200
-      - SEND_AUTH_OTP_RATE_LIMIT=60
       - SES_PORT=1025
       - SES_HOST=maildev
       - WEBHOOK_SQS_URL=http://localhost:4566/000000000000/local-webhooks-sqs-main
-      - INTRANET_IP_LIST_PATH
       - SENTRY_CONFIG_URL=https://random@sentry.io/123456
       - CSP_REPORT_URI=https://random@sentry.io/123456
       # This needs to be removed and replaced with a real tracking ID in a local .env file
       # in order to enable GA in a local environment
       # TODO: remove after React rollout #4786
-      - GA_TRACKING_ID=mockGATrackingId
+      # - GA_TRACKING_ID=mockGATrackingId
       # Test credentials from reCAPTCHA docs
       # https://developers.google.com/recaptcha/docs/faq#id-like-to-run-automated-tests-with-recaptcha.-what-should-i-do
-      - GOOGLE_CAPTCHA=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
-      - GOOGLE_CAPTCHA_PUBLIC=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+      # - GOOGLE_CAPTCHA=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+      # - GOOGLE_CAPTCHA_PUBLIC=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
       # Keep in sync with the development key in
       # https://github.com/opengovsg/formsg-javascript-sdk/blob/develop/src/resource/verification-keys.ts
-      - VERIFICATION_SECRET_KEY=iGkfOuI6uxrlfw+7CZFFUZBwk86I+pu6v+g7EWA6qJpJnilXQleCPx2EVTr24eWWphzFO2WJiaL53oyXnqWdBQ==
+      # - VERIFICATION_SECRET_KEY=iGkfOuI6uxrlfw+7CZFFUZBwk86I+pu6v+g7EWA6qJpJnilXQleCPx2EVTr24eWWphzFO2WJiaL53oyXnqWdBQ==
       # Keep in sync with the development key in
       # https://github.com/opengovsg/formsg-javascript-sdk/blob/develop/src/resource/signing-keys.ts
-      - SIGNING_SECRET_KEY=HDBXpu+2/gu10bLHpy8HjpN89xbA6boH9GwibPGJA8BOXmB+zOUpxCP33/S5p8vBWlPokC7gLR0ca8urVwfMUQ==
+      # - SIGNING_SECRET_KEY=HDBXpu+2/gu10bLHpy8HjpN89xbA6boH9GwibPGJA8BOXmB+zOUpxCP33/S5p8vBWlPokC7gLR0ca8urVwfMUQ==
       # Mock Twilio credentials. SMSes do not work in dev environment.
       - TWILIO_ACCOUNT_SID=AC00000000000000000000000000000000
       - TWILIO_API_KEY=mockTwilioApiKey
       - TWILIO_API_SECRET=mockTwilioApiSecret
       - TWILIO_MESSAGING_SERVICE_SID=MG00000000000000000000000000000000
-      - SP_OIDC_NDI_DISCOVERY_ENDPOINT=http://localhost:5156/singpass/v2/.well-known/openid-configuration
-      - SP_OIDC_NDI_JWKS_ENDPOINT=http://localhost:5156/singpass/v2/.well-known/keys
-      - SP_OIDC_RP_CLIENT_ID=rpClientId
-      - SP_OIDC_RP_REDIRECT_URL=http://localhost:5001/api/v3/singpass/login
-      - SP_OIDC_RP_JWKS_PUBLIC_PATH=./__tests__/setup/certs/test_sp_rp_public_jwks.json
-      - SP_OIDC_RP_JWKS_SECRET_PATH=./__tests__/setup/certs/test_sp_rp_secret_jwks.json
-      - CP_OIDC_NDI_DISCOVERY_ENDPOINT=http://localhost:5156/corppass/v2/.well-known/openid-configuration
-      - CP_OIDC_NDI_JWKS_ENDPOINT=http://localhost:5156/corppass/v2/.well-known/keys
-      - CP_OIDC_RP_CLIENT_ID=rpClientId
-      - CP_OIDC_RP_REDIRECT_URL=http://localhost:5001/api/v3/corppass/login
-      - CP_OIDC_RP_JWKS_PUBLIC_PATH=./__tests__/setup/certs/test_cp_rp_public_jwks.json
-      - CP_OIDC_RP_JWKS_SECRET_PATH=./__tests__/setup/certs/test_cp_rp_secret_jwks.json
-      - IS_SP_MAINTENANCE
-      - IS_CP_MAINTENANCE
-      - SINGPASS_ESRVC_ID=spEsrvcId #Needed for MyInfo
-      - MYINFO_BANNER_CONTENT
-      - MYINFO_CLIENT_CONFIG=dev
-      # Use mockpass key pairs and endpoints
-      - MYINFO_FORMSG_KEY_PATH=./node_modules/@opengovsg/mockpass/static/certs/key.pem
-      - MYINFO_CERT_PATH=./node_modules/@opengovsg/mockpass/static/certs/spcp.crt
-      - MYINFO_CLIENT_ID=mockClientId
-      - MYINFO_CLIENT_SECRET=mockClientSecret
-      - MYINFO_JWT_SECRET=mockJwtSecret
-      - SGID_HOSTNAME=http://localhost:5156
-      - SGID_CLIENT_ID=sgidclientid
-      - SGID_CLIENT_SECRET=sgidclientsecret
-      - SGID_JWT_SECRET=sgidjwtsecret
-      - SGID_ADMIN_LOGIN_REDIRECT_URI=http://localhost:5001/api/v3/auth/sgid/login
-      - SGID_FORM_LOGIN_REDIRECT_URI=http://localhost:5001/sgid/login
-      - SGID_PRIVATE_KEY=./node_modules/@opengovsg/mockpass/static/certs/key.pem
-      - SGID_PUBLIC_KEY=./node_modules/@opengovsg/mockpass/static/certs/server.crt
       - SES_PASS
       - SES_USER
       - OTP_LIFE_SPAN
-      - AWS_REGION
       # this needs to be replaced with the ID of a feedback form that you create
       # in your local environment
       - REACT_SWITCH_ENV_FEEDBACK_FORM_ID_ADMIN=6386ecc0bdf691005457c67e
