--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.347.1",
     "@aws-sdk/client-lambda": "^3.414.0",
+    "@aws-sdk/client-ssm": "^3.485.0",
     "@babel/runtime": "^7.20.13",
     "@faker-js/faker": "^8.0.1",
     "@joi/date": "^2.1.0",
@@ -106,6 +107,7 @@
     "hot-shots": "^9.3.0",
     "html-entities": "^2.3.3",
     "html-escaper": "^3.0.3",
+    "html-react-parser": "^5.0.11",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.2.0",
     "intl-tel-input": "~12.4.0",
